waybar/style.css
* {
	font-family: Hack Nerd Font;
	font-size: 20px;
}

window#waybar {
	background-color: transparent;
	color: #D4BE98;
}

#custom-upper-left,
#custom-upper-right {
	color: #252423;
	font-size: 30px;
}

#custom-lower-left,
#custom-lower-right {
	color: #252423;
	font-size: 28px;
	border-bottom: 3px solid #3C3836;
}

#custom-gap {
	color: transparent;
}

#user,
#cpu,
#window,
#clock,
#backlight,
#network,
#battery,
#pulseaudio,
#workspaces {
	background-color: #252423;
	padding-left: 10px;
	padding-right: 10px;
	border-bottom: 3px solid #3C3936;
}

#user {
	background-color: #252423;
}

.modules-left widget:nth-child(2) #custom-lower-left {
	color: #252423;
}

#cpu {
	background-color: #574833;
}

.modules-left widget:nth-child(3) #custom-upper-right {
	color: #574833;
}

.modules-left widget:nth-child(5) #custom-lower-left {
	color: #574833;
}

#clock {
	background-color: #32361A;
}

.modules-left widget:nth-child(6) #custom-upper-right {
	color: #32361A;
}

.modules-left widget:nth-child(8) #custom-lower-left {
	color: #32361A;
}

#window {
	background-color: #424A3E;
}

.modules-left widget:nth-child(9) #custom-upper-right {
	color: #424A3E;
}

.modules-left widget:nth-child(11) #custom-lower-left {
	color: #424A3E;
}

#workspaces {
	background-color: transparent;
	border-bottom: none;
	padding: 0px;
}

#workspaces button {
	margin-left: 5px;
	margin-right: 5px;
	color: #D4BE98;
	border-bottom: 3px solid #E78A4E;
	opacity: 0.3;
}

#workspaces button.active {
	opacity: 0.8;
}

#backlight {
	background-color: #3D4220;
}

.modules-right widget:nth-child(1) #custom-lower-right {
	color: #3D4220;
}

.modules-right widget:nth-child(3) #custom-upper-left {
	color: #3D4220;
}

#pulseaudio {
	background-color: #543937;
}

.modules-right widget:nth-child(4) #custom-lower-right {
	color: #543937;
}

.modules-right widget:nth-child(6) #custom-upper-left {
	color: #543937;
}

#battery {
	background-color: #404946;
}

.modules-right widget:nth-child(7) #custom-lower-right {
	color: #404946;
}

.modules-right widget:nth-child(9) #custom-upper-left {
	color: #404946;
}

